<resources>
    <string name="app_name">QFind</string>
    <string name="qfind_of_the_day">QFIND OF THE DAY</string>
    <string name="search_hint">What would you like to find today?</string>
    <string name="or">OR</string>
    <string name="find_by_category">FIND BY CATEGORY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_us">About us</string>
    <string name="how_to_become_qfinder">How to become Qfinder</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="menu">MENU</string>
    <string name="contact_us">Contact us</string>
    <string name="settings">Settings</string>
    <string name="english">English</string>
    <string name="arabic">عربى</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="select_language">Select Language</string>
    <string name="already_english">Current Language is English</string>
    <string name="activity_reload_string">you will be redirected to home page, after changing the language.do you want to continue?</string>
    <string name="categories_text">Categories</string>
    <string name="history_text">History</string>
    <string name="search_results_text">Search Results</string>
    <string name="favorites_text">Favorites</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="removed_to_favorites">Removed from Favorites</string>
    <string name="no_data_text">No data</string>
    <string name="no_result_text">No results found</string>
    <string name="something_went_wrong">Oops! something went wrong</string>
    <string name="error_in_connecting">Error in connecting the server</string>
    <string name="check_network">Check your internet connection</string>
    <string name="un_authorised">Unauthorized access</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://ec2-18-219-90-185.us-east-2.compute.amazonaws.com\",\n  }\n}]</string>
    <string name="no_data_to_share">No data to share</string>
    <string name="no_data_to_favorite">No data to add favorite</string>
    <string name="title_activity_webview">Webview</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="no_history_yet">No views yet</string>
    <string name="favorite_alert_message">Item will be deleted from favorites.Do you want to continue?</string>
    <string name="favorite_alert_title">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="January">Jan</string>
    <string name="February">Feb</string>
    <string name="March">Mar</string>
    <string name="April">Apr</string>
    <string name="May">May</string>
    <string name="June">Jun</string>
    <string name="July">Jul</string>
    <string name="August">Aug</string>
    <string name="September">Sep</string>
    <string name="October">Oct</string>
    <string name="November">Nov</string>
    <string name="December">Dec</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Closed">Closed</string>

</resources>
