<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/about_us_menu_item"
            android:title="@string/about_us"
            />
        <item
            android:id="@+id/qfinder_menu_item"
            android:title="@string/how_to_become_qfinder" />
        <item
            android:id="@+id/terms_menu_item"
            android:title="@string/terms_and_conditions" />
        <item
            android:id="@+id/contact_menu_item"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/settings_menu_item"
            android:title="@string/settings" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
