<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="130dp"
    android:gravity="center"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    android:padding="@dimen/padding_10">
    <TextView
        android:id="@+id/txt_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/padding_15"
        android:textAlignment="center"
        android:text="@string/activity_reload_string"
        android:textColor="@color/black"
        android:textSize="@dimen/dialog_text_size"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="@dimen/padding_50"
        android:paddingEnd="@dimen/padding_50"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:clickable="true"
            android:text="@string/no"
            android:textColor="@color/color_white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_15"
            android:background="@drawable/round_corner"
            android:clickable="true"
            android:text="@string/yes"
            android:textColor="@color/color_white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
