<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="qfind.com.qfindappandroid.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/padding_15"
        android:paddingStart="@dimen/padding_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="43.85">

            <cn.lightsky.infiniteindicator.InfiniteIndicator
                android:id="@+id/indicator_default_circle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:indicator_type="indicator_default" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12.52">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/padding_5"
                android:text="@string/qfind_of_the_day"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9.18"
            android:background="@drawable/edit_text_border"
            android:orientation="vertical">


            <AutoCompleteTextView
                android:id="@+id/autoCompleteEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:inputType="textAutoComplete|textAutoCorrect"
                android:paddingStart="@dimen/home_hit_padding"
                android:paddingEnd="@dimen/home_hit_padding"
                android:textSize="@dimen/home_page_find_today_text">

            </AutoCompleteTextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:paddingBottom="@dimen/padding_5"
                android:paddingTop="@dimen/padding_5"
                android:src="@drawable/logo" />

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingBottom="@dimen/padding_10"
                android:paddingTop="@dimen/padding_10"
                android:src="@drawable/search" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="17"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/or" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="13.88"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/findByCategoryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/color_dark_blue"
                android:padding="@dimen/padding_20"
                android:text="@string/find_by_category"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_15" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.57" />
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:menu="@menu/activity_contain_drawer">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
