<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar_bg"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_10"
                android:paddingTop="@dimen/padding_10">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="72.82"
                    android:background="@drawable/edit_text_border"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:background="@drawable/edit_text_bg"
                        android:ems="10"
                        android:hint="@string/search_hint"
                        android:imeOptions="actionSearch"
                        android:inputType="textAutoComplete|textAutoCorrect"
                        android:paddingEnd="@dimen/home_hit_padding"
                        android:paddingStart="@dimen/home_hit_padding"
                        android:textColor="@color/black"
                        android:textColorHint="#cac9c9"
                        android:textSize="@dimen/toolbar_find_today_hint">

                    </AutoCompleteTextView>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:paddingBottom="@dimen/padding_5"
                        android:paddingTop="@dimen/padding_5"
                        android:src="@drawable/logo" />

                    <ImageView
                        android:id="@+id/search_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="?attr/selectableItemBackground"
                        android:paddingBottom="@dimen/padding_10"
                        android:paddingTop="@dimen/padding_10"
                        android:src="@drawable/search" />

                </RelativeLayout>

                <ImageView
                    android:id="@+id/sideMenu"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="22.5"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:paddingBottom="@dimen/padding_10"
                    android:paddingTop="@dimen/padding_10"
                    android:src="@drawable/hamburger_menu_white" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:id="@+id/activity_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/color_white"
            app:itemIconTint="@color/bottom_nav_style"
            app:menu="@menu/navigation">

        </android.support.design.widget.BottomNavigationView>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/color_dark_gray"
        android:fitsSystemWindows="false"
        android:theme="@style/NavigationViewCustomColor"
        app:itemTextColor="@color/color_white">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/padding_20"
                android:paddingStart="@dimen/padding_20">

                <TextView
                    android:id="@+id/side_menu_tittle_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/menu"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/text_size_19sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/side_menu_hamburger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:src="@drawable/hamburger_icon" />
                </RelativeLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/padding_20"
                android:paddingStart="@dimen/padding_20">

                <LinearLayout
                    android:id="@+id/about_us_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/side_menu_about_us_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_10"
                        android:text="@string/about_us"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/text_size_18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/padding_15"
                        android:background="@color/color_white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/qfinder_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/side_menu_qfinder_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_10"
                        android:text="@string/how_to_become_qfinder"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/text_size_18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/padding_15"
                        android:background="@color/color_white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/terms_and_condition_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/side_menu_terms_condition_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_10"
                        android:text="@string/terms_and_conditions"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/text_size_18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/padding_15"
                        android:background="@color/color_white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/contact_us_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/side_menu_contact_us_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_10"
                        android:text="@string/contact_us"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/text_size_18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/padding_15"
                        android:background="@color/color_white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/settings_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/side_menu_settings_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_10"
                        android:text="@string/settings"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/text_size_18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/padding_15"
                        android:background="@color/color_white" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>